// Vitest Snapshot v1

exports[`Home Test > button click 1`] = `
"<div>Home</div>
<h1>----2</h1>
<h2 class=\\"count\\">1</h2>
<h2>msg: hello world</h2>
<button>增加</button>"
`;

exports[`Home Test > should render 1`] = `
"<div>Home</div>
<h1>----0</h1>
<h2 class=\\"count\\">0</h2>
<h2>msg: hello world</h2>
<button>增加</button>"
`;
